--- a/1_Code_project.qmd
+++ b/1_Code_project.qmd
@@ -61,9 +61,9 @@ This project is powered by two databases :
 
 The first database was created by the French National Center for Cinema and the Moving Image, most commonly known as CNC. The CNC is an agency of the French Ministry of Culture. Its role is to implement the state's policy on the question of cinema, audiovisual and multimedia. It is notably in charge of the regulation, promotion and distribution of French movies.
 
-In the execution of its mission, the French agency also collects data regarding its purview and proposes part of them in open access. The database "Exploitation - data by department" is one of the aforementioned open data. It is a statistical monitoring of the evolution of French cinema theaters and their attendance between 1966 and 2022. Notably, it contains data on the number of venues, their characteristics (e.g. number of screens, seating capacity, ...); but also on the number of sold tickets and gained revenues. As its name indicates, French departments (according to their 2021 administrative division) are the statistical unit of the data. The CNC's data is constructed by using two primary sources :
+In the execution of its mission, the French agency also collects data regarding its purview and proposes part of them in open access. The database "Exploitation - data by department" is one of the aforementioned open data. It is a statistical monitoring of the evolution of French movie theaters and their attendance between 1966 and 2022. Notably, it contains data on the number of venues, their characteristics (e.g. number of screens, seating capacity, ...); but also on the number of sold tickets and gained revenues. As its name indicates, French departments (according to their 2021 administrative division) are the statistical unit of the data. The CNC's data is constructed by using two primary sources :
 
--   the **list of cinemas** authorized by the agency
+-   the **list of movie theaters** authorized by the agency
 
 -   and their "bordereaux des recettes" which can be roughly translated by "**revenue slips**"
 
@@ -297,11 +297,11 @@ The databases at our disposal will help us to explore this question by looking i
 
 1.  **Evolution of the Market :** The information provided will help us understand how the movie theater market has evolved in terms of volumes over the last fifty years. One of the key aspects in exploring this question will be to examine the market evolution in terms of venues (établissements). However, the number of movie theaters will not be our sole indicator. Indeed, the number of sessions (séances), seats (fauteuils), and screens (écrans) will be complementary variables that can help us to put under the spotlight potential trends that may not be apparent when solely examining the number of venues. Employing panel data has a dual utility here. It not only enables us to capture the overall temporal trends but also to observe potential cross-sectional differences. Indeed, one of our key objectives is to comprehend whether divergences in trajectories and characteristics exist among the various French departments.
 
-2.  **Structural Shifts with Multiplexes:** A zoom on the multiplexes permits evaluating a recent structural transformation in the movie theater industry. The first one appears in France during the end of the 1990s and can be arguably seen as a shift in the cinema market. Blanchard ([2014](https://www.cairn.info/revue-migrations-societe-2014-1-page-153.htm)) argues that these facilities "have contributed to the resurgence of attendance, notably by making the cinema more accessible to suburban residents." Furthermore, despite their relative novelty, they represent an important share of the market industry.
+2.  **Structural Shifts with Multiplexes:** A zoom on the multiplexes permits evaluating a recent structural transformation in the movie theater industry. The first one appears in France during the end of the 1990s and can be arguably seen as a shift in the movie theater market. Blanchard ([2014](https://www.cairn.info/revue-migrations-societe-2014-1-page-153.htm)) argues that these facilities "have contributed to the resurgence of attendance, notably by making the movie theater more accessible to suburban residents." Furthermore, despite their relative novelty, they represent an important share of the market industry.
 
 3.  **Economic Health of the Industry:** Variables such as the number of tickets bought (entrées) and total revenue (recettes) will also be complementary and potentially important information. They will notably be key tools for gauging the economic vitality of the industry and determining if the economic dynamics align with the stock of venues, seats, and their past investments.
 
-4.  **Cultural Diversity through Arthouse Cinemas:** The representation of Arthouse cinemas in our dataset highlights the emergence of a cultural niche. Examining the growth and audience engagement of these cinemas provides insights into the supply and demand for culturally diverse content.
+4.  **Cultural Diversity through Arthouse Cinemas:** The representation of Arthouse cinemas in our dataset highlights the emergence of a cultural niche. Examining the growth and audience engagement of these movie theaters provides insights into the supply and demand for culturally diverse content.
 
 5.  **Demographic Dynamics :** The inclusion of variables from the INSEE database is a key step in our investigation. Utilizing information on age groups (AGE_GROUP) and socio-professional categories (CSP) will enable us to discern whether correlations exist between the demographic composition of the population and the trajectories of distinct departmental markets.
 
@@ -311,7 +311,7 @@ In essence, our research delves into the recent history of movie theaters in Fra
 
 \newpage
 
-# Evolution of the cinema market in time : a description of the major trend
+# Evolution of the movie theater market in time : a description of the major trend
 
 ## Introduction : the "golden age" of the first half of the 20th century
 
@@ -319,13 +319,13 @@ The history of the movie theater market unfolds on a winter day. In December 28t
 
 ![](Pictures%20and%20illustrations/cinema-lumiere.jpg){fig-align="center"}
 
-The movie theaters market experienced growth relatively quickly. According to Muhlberger (2013) it already became a mass leisure activity in Franc in 1920s but also in the USA and numerous European countries. However, it fully blossomed in the Hexagone a decade later. The period between 1929 and 1957 is often described as a golden age for cinema in France. Movie theaters attendance reached its zenith, with peaks beyond 400 millions entries. In a report for the French Senate, Thiolliere and Ralite (2003) link this fast period with the introduction of talking films.
+The movie theaters market experienced growth relatively quickly. According to Muhlberger (2013) it already became a mass leisure activity in Franc in 1920s but also in the USA and numerous European countries. However, it fully blossomed in the Hexagone a decade later. The period between 1929 and 1957 is often described as a golden age for movie theater in France. Movie theaters attendance reached its zenith, with peaks beyond 400 millions entries. In a report for the French Senate, Thiolliere and Ralite (2003) link this fast period with the introduction of talking films.
 
 <br>
 
-The importance of cinema during this period maybe underestimated by our contemporary eyes. However, the two senatorial rapporteurs explain that :
+The importance of movie theater during this period maybe underestimated by our contemporary eyes. However, the two senatorial rapporteurs explain that :
 
-" until the advent of the 'petite lucarne' (i.e. television) in households, cinema had a monopoly on the broadcasting of images. People frequented the theater, not to see a film, but rather to watch a program consisting of one or more short films, news, the trailer for the next film and, after the intermission and advertising, of the 'feature film'."
+" until the advent of the 'petite lucarne' (i.e. television) in households, movie theater had a monopoly on the broadcasting of images. People frequented the theater, not to see a film, but rather to watch a program consisting of one or more short films, news, the trailer for the next film and, after the intermission and advertising, of the 'feature film'."
 
 <center>*THIOLLIERE Michel & RALITE Jack au nom de la Commission des affaires culturelles du Sénat, 2003.* L'évolution du secteur de l'exploitation cinématographique, Rapport d'information sénatoriale n°308 (2002-2003)</center>
 
@@ -335,7 +335,7 @@ As in many stories, this golden age was not eternal. Ours knew its dawn in 1957.
 
 <br>
 
-## Evolution of cinema in France from 1966 to 2022 : a global perspective
+## Evolution of movie theater in France from 1966 to 2022 : a global perspective
 
 <br>
 
@@ -460,7 +460,7 @@ ggplot(merged_data, aes(fill = attendance_evolution)) +
 
 <br>
 
-```{r Statistics_on_recettes}
+```{r Statistics_on_revenue}
 recette_nat <- cnc_data_clean %>% 
   group_by(year) %>% 
   summarize(recette_tot = sum(recettes, na.rm = TRUE))
@@ -536,9 +536,9 @@ ggplotly(Re_graph3)
 
 #### Evolution of the structure of the market
 
-The number of seats strongly declined during this period. As we can see on the graphic below, while the Hexagon welcomed 2,4 million of cinema seats in 1966, only 93 000 seats characetrized the French market in 1992.
+The number of seats strongly declined during this period. As we can see on the graphic below, while the Hexagon welcomed 2,4 million of movie theater seats in 1966, only 93 000 seats characetrized the French market in 1992.
 
-```{r statistics_on_seats_and_screens}
+```{r Statistics_on_seats_and_screens}
 Equip_nat <- cnc_data_clean %>% 
   group_by(year) %>% 
   summarize(Screens = sum(écrans, na.rm = TRUE),
@@ -546,7 +546,7 @@ Equip_nat <- cnc_data_clean %>%
             Seats_by_screens = Seats/Screens)
 ```
 
-```{r}
+```{r Graph_number_of_seats}
 #Evolution of the number of seats
 
 Se_graph1 <- Equip_nat %>% 
@@ -561,13 +561,13 @@ ggplotly(Se_graph1, dynamicTicks = TRUE)
 
 <br>
 
-Data on the number of cinemas is not available on our database before 1992. However, we have for hypothesis that a part of this decline is due to the foreclosure of movie theaters. Nevertheless, this hypothesis is not sufficient to understand the evolution of the number of seats during this quarter of century.
+Data on the number of movie theaters is not available on our database before 1992. However, we have for hypothesis that a part of this decline is due to the foreclosure of movie theaters. Nevertheless, this hypothesis is not sufficient to understand the evolution of the number of seats during this quarter of century.
 
 Indeed, what can be surprising is that, at the same time that the number of seats diminished, the number of screens had a different journey.
 
 Until 1971, the number of seats and screens followed the same downward trajectory. However, while the number of seats plundered, the number of screens tended to stabilize then to grow between 1972 and 1985. The graphic below highlights these elements. By using a 1966 base index 100 for both variables, we can focus on their evolution, putting aside the scale effect. The index of the number of seats almost halved from 1972 to 1985. In parallel the index of the number of screens is more than 20 points higher in 1985 than what was observed in 1972. It is even 5 points higher than the index in 1966. Despite the fact that the number of screens experienced a period of degrowth between 1986 and 1992, a serious gap exists between the two indexes in 1992.
 
-```{r}
+```{r Graph_Comp_Seats_and_Screens}
 #Addition of base index 100 variable
 Equip_nat <- Equip_nat %>%  mutate(Screens_b100=Screens/Screens[year==1966]*100, Seats_b100=Seats/Seats[year==1966]*100)
 
@@ -594,9 +594,9 @@ ggplotly(Se_Sc_graph1, dynamicTicks = TRUE) %>%
 
 <br>
 
-How can we comprehend these contradictory trends? Thiolliere and Ralite (2003) explained that this paradox can be explained by a structural change of the movie theater market. Prior to the late 60s, a large portion of the cinema market was dominated by single-screen movie halls with a substantial number of seats. Everything changed after the 60s. The second half of the 21st century witnessed a shift from one-room movie halls to halls with fewer seats but a plural number of screens. Thus, some former one-room cinemas repurposed their spaces to welcome more screens, and multiroom setups became predominant among newly constructed cinemas. Thiolliere and Ralite assert that this new structure enabled the industry to intensify its exploitation capabilities in order to offer more choices for its consumers. These new cinemas had better performance than their one-room elders, explaining the latter's gradual disappearance. This shift can be observed in the ratio of chairs to screens, which can be interpreted as an indicator of the size of the screening room in terms of seats.
+How can we comprehend these contradictory trends? Thiolliere and Ralite (2003) explained that this paradox can be explained by a structural change of the movie theater market. Prior to the late 60s, a large portion of the movie theater market was dominated by single-screen movie halls with a substantial number of seats. Everything changed after the 60s. The second half of the 21st century witnessed a shift from one-room movie halls to halls with fewer seats but a plural number of screens. Thus, some former one-room movie theaters repurposed their spaces to welcome more screens, and multiroom setups became predominant among newly constructed movie theaters. Thiolliere and Ralite assert that this new structure enabled the industry to intensify its exploitation capabilities in order to offer more choices for its consumers. These new movie theaters had better performance than their one-room elders, explaining the latter's gradual disappearance. This shift can be observed in the ratio of chairs to screens, which can be interpreted as an indicator of the size of the screening room in terms of seats.
 
-```{r}
+```{r Graph_Ratio_Seats_by_Screens}
 Se_Sc_graph2 <- Equip_nat %>%
   filter(year<1993) %>% 
   ggplot(aes(x=year,y=Seats_by_screens))+
@@ -633,9 +633,9 @@ Av_Growth_rate_1993_2019 <- Attendance_nat %>%
   round(., digits=1)
 ```
 
-In many movies, after a tragic downfall, the hero comeback in a flamboyant manner.If this storyline mark movies in theater, it also echoes the history of the industry. The 25 years between 1993 and 2019 are a period of growth for the cinema's market. The attendance went from 130 million to suprass the symbolic bar of the 200 million. If this level is still lower thanwhat was observed during the "golden age", the upturn is still significant with agrowth of `r Growth_rate_1993_2019` % during the period and an average growth of `r Av_Growth_rate_1993_2019` % by year.
+In many movies, after a tragic downfall, the hero comeback in a flamboyant manner.If this storyline mark movies in theater, it also echoes the history of the industry. The 25 years between 1993 and 2019 are a period of growth for the movie theater's market. The attendance went from 130 million to suprass the symbolic bar of the 200 million. If this level is still lower thanwhat was observed during the "golden age", the upturn is still significant with agrowth of `r Growth_rate_1993_2019` % during the period and an average growth of `r Av_Growth_rate_1993_2019` % by year.
 
-```{r}
+```{r Graph_attendance_after_1992}
 Att_graph3 <- Attendance_nat %>% 
   filter(year >1992) %>% 
   ggplot(aes(x = year, y = Attendance)) +
@@ -648,7 +648,7 @@ ggplotly(Att_graph3, dynamicTicks = TRUE)
 
 <br>
 
-```{r}
+```{r Graph_growth_rate_after_1992}
 Att_graph4 <-Attendance_nat %>% 
   filter(year >1992 & year<2020) %>% 
   mutate(Growth_rate=ifelse(Growth<0, "Negative", "Positive")) %>% 
@@ -731,7 +731,7 @@ Several concurrent definitions exist for the term 'multiplex.' A broad one can c
 
 The last three decades are indeed an era of sustained growth for multiplexes. Their numbers have multiplied by seven between 1993 and 2022.
 
-```{r Statistics_on_etablissement}
+```{r Statistics_on_etablishment}
 Etablissement_nat <- cnc_data_clean %>% 
   filter(!is.na(multiplexes)) %>% 
   group_by(year) %>% 
@@ -756,15 +756,15 @@ ggplotly(M_graph1, dynamicTicks = TRUE)
 
 <br>
 
-Data on the number of cinemas were not available in the database prior to 1992. The existing data seem to reveal 3 phases :
+Data on the number of movie theaters were not available in the database prior to 1992. The existing data seem to reveal 3 phases :
 
 -   a period of growth in the 90s
 
--   a decline in the number of cinemas between 2000 and 2014
+-   a decline in the number of movie theaters between 2000 and 2014
 
 -   and, a small revival between 2014 and 2018.
 
-However, when observing the number of cinemas, multiplexes excluded, a different story unfolds before our eyes. The graph below shows the evolution of the number of cinemas, both with and without multiplexes. It appears that multiplexes accounted for most of the growth in the 1990s. Moreover, the number of cinemas has plummeted since 2000 when multiplexes are excluded from the count. Nevertheless, it is important to note that our analysis is limited by an element whose significance remains uncertain. Our data do not allow us to distinguish between the outright closure of cinemas and the transformation of former multiroom cinemas into multiplexes.
+However, when observing the number of movie theaters, multiplexes excluded, a different story unfolds before our eyes. The graph below shows the evolution of the number of movie theaters, both with and without multiplexes. It appears that multiplexes accounted for most of the growth in the 1990s. Moreover, the number of movie theaters has plummeted since 2000 when multiplexes are excluded from the count. Nevertheless, it is important to note that our analysis is limited by an element whose significance remains uncertain. Our data do not allow us to distinguish between the outright closure of movie theaters and the transformation of former multiroom movie theaters into multiplexes.
 
 ```{r}
 Et_graph <- Etablissement_nat %>% 
@@ -772,7 +772,7 @@ Et_graph <- Etablissement_nat %>%
   pivot_longer(cols = c(`All movie theater`, `Movie theater excluding multiplexes`),names_to = "Variables",values_to = "Nb") %>% 
   filter(year<2022) %>% 
   ggplot(aes(x=year,y=Nb, color=Variables)) +
-  labs(title = "Number of movie theater in France between 1992 and 2022", x="Year", y="Number of cinemas")+
+  labs(title = "Number of movie theater in France between 1992 and 2022", x="Year", y="Number of movie theaters")+
   geom_line(linewidth = 0.75)+
   theme_classic() +
   theme(legend.position = "bottom")
@@ -786,7 +786,7 @@ ggplotly(Et_graph, dynamicTicks = TRUE, tooltip = "text") %>%
 
 <br>
 
-The share of multiplexes in the total number of movie theaters also grew during this year, gaining 9.5 percentage points between 1993 and 2018. Furthermore, if multiplexes may still be a minority in the overall number of cinemas, this is not the case for the total number of attendance. They accounted for more than half of the entries in 2012 (Blanchard, 2014).
+The share of multiplexes in the total number of movie theaters also grew during this year, gaining 9.5 percentage points between 1993 and 2018. Furthermore, if multiplexes may still be a minority in the overall number of movie theaters, this is not the case for the total number of attendance. They accounted for more than half of the entries in 2012 (Blanchard, 2014).
 
 ```{r}
 M_graph2 <- Etablissement_nat %>% 
@@ -836,7 +836,7 @@ Se_Growth_rate_1993_2022 <- Equip_nat %>%
   round(.,digits = 0)
 ```
 
-The number of seats started also to grow again. This growth did not compensante the historical significant decline that marked the second haft of the 20th century - c.f. graph below on the 1962-2022 period. However, it is still highlysignificant regarding the level observed in 1993 -c.f. graph below on the 1993-2022 period. In total, the number of seats increased of `r Se_diff_rate_1993_2022` seats, representing an augmentation of `r Se_Growth_rate_1993_2022` %.
+The number of seats started also to grow again. This growth did not compensate the historical significant decline that marked the second haft of the 20th century - c.f. graph below on the 1962-2022 period. However, it is still highly significant regarding the level observed in 1993 -c.f. graph below on the 1993-2022 period. In total, the number of seats increased of `r Se_diff_rate_1993_2022` seats, representing an augmentation of `r Se_Growth_rate_1993_2022` %.
 
 ```{r}
 #Evolution of the number of Seats
@@ -1131,51 +1131,8 @@ $$ Where :
 
 -   $u$ : the residuals
 
-Various models were tested during the draft of our work, considering factors such as age range, type of activity and combinations of the aforementioned data with CSP. However, we opted for this final model for two reasons. Firstly, it had a good Bayesian information criterion (BIC) score relatively to its counterpart (see Annex 2 for the method used to compute the BIC score). Secondly, it was the model were the colinearity among explanotary variables was the least strong. The main part of our econometrics treatment were performed with the **plm** package. By prudence, we selected to apply only basic techniques for the econometric analysis of panel data.
-
-```{r Creation_of_the_needed_datasets_for the models}
-
-# Importation of the database
-insee_econ <- read.csv("Data/INSEE_clean_econ.csv")
-
-insee_econ <- insee_econ  %>%  
-  select(-X) %>% filter(nchar(DEP_RES_21) != 3) %>%  
-  rename(departement_code = DEP_RES_21, year =  AN_RECENS) 
-
-# Fusion with CNC Data
-
-Econ_data <- left_join(cnc_data_clean, insee_econ, by = c("departement_code", "year"))
-
-Econ_data <- Econ_data %>% 
-  filter(!is.na(POND2))
-
-
-# Number of inhabitant by age range
-
-Econ_data_AG <- Econ_data %>% 
-  group_by(departement_code, year, AGE_GROUP) %>% 
-  summarise(POND2=sum(POND2)) %>% pivot_wider(names_from = "AGE_GROUP", values_from = "POND2") %>% 
-  select(departement_code, year,a_less_than_6, a_6_to_24, a_25_to_42, a_43_to_59, a_60_and_more)
-
-# Number of inhabitant by CSP
-
-
-Econ_data_CSP <- Econ_data %>%
-  group_by(departement_code, year, CSP) %>% 
-  summarise(POND2=sum(POND2, na.rm = TRUE)) %>% 
-  pivot_wider(names_from = "CSP", values_from = "POND2" ) %>% 
-  rename( Farm = "1", Craf_sh_head = "2", Ex_intel = "3", Int_prof = "4", Employees = "5", Workers = "6", Retirees = "8", Ina = "9")
-
-#Final dataset with AGE_GROUP and CSP
-Econ_data_v2 <- Econ_data %>% 
-  select(departement_code, year, entrées) %>%
-  distinct() %>%  
-  left_join(Econ_data_AG, by = c("departement_code", "year"))
-
-Econ_data_v2 <- Econ_data_v2  %>% 
-  left_join(Econ_data_CSP, by = c("departement_code", "year"))
-
-```
+This Panel Data is such that N = 96 and T = 8 (the 8 years of the french census that are present in the Insee's dataset). <br> Various models were tested during the draft of our work, considering factors such as age range, type of activity and combinations of the aforementioned data with CSP. However, we opted for this final model for two reasons. Firstly, it had a good Bayesian information criterion (BIC) score relatively to its counterpart (see Annex 2 for the method used to compute the BIC score). Secondly, it was the model were the colinearity among explanotary variables was the least strong. The main part of our econometrics treatment were performed with the **plm** package. By prudence, we selected to apply only basic techniques for the econometric analysis of panel data.
+<br>
 
 #### Choice of the type of model
 
@@ -1213,29 +1170,30 @@ phtest(f_eff, r_eff)
 ```
 
 <br>
+
 #### Test for time-fixed effect and individual effect
 
 Having selected the fixed effect model, the next step was to identify whether the addition of time-fixed effects contribute to the improvement the model's quality.
 
-With p-values below 0.05, both Breusch-Pagan and Honda tests advocate for the addition  of time-fixed effect.
+With p-values below 0.05, both Breusch-Pagan and Honda tests advocate for the addition of time-fixed effect.
 
-
-```{r}
+```{r test_for_time_fixed_effect}
 #Model with time-fixed effects.
 f_eff_time <-plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2, index=c("departement_code", "year"), model="within", effect = "time")
 
 #PLM test
 plmtest(f_eff_time, effect="time", type="bp")
 plmtest(f_eff_time, effect="time", type="honda")
-
-
 ```
 
-We then used a two ways model combining time-fixed and individual effects. Our model became :
+We then used a two ways model combining time-fixed and individual effects. Our model became : 
+<br> 
+
 $$
 Attendance = \beta_0 + \beta_1 Farm_{it} + \beta_2 Craf\_sh\_head_{it} + \beta_3 Ex\_intel_{it} + \beta_4 Int\_prof_{it} + \beta_5 Employees_{it} + \beta_6 Workers_{it} + \beta_7 Retirees_{it} + \beta_8 Ina_{it} + \alpha_{it} + \gamma_{it} + u_{it}
 $$
-```{r}
+
+```{r Creation_of_the_two_ways_model}
 f_eff_2ways <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2, index=c("departement_code", "year"), model="within",effect = "twoways")
 ```
 
@@ -1258,8 +1216,10 @@ adf.test(Econ_data_v2$entrées, k=2)adf.test(Econ_data_v2$entrées, k=2)
 Our panel data faces several issues. Firstly, our model suffers from serial correlation. The Breusch-Godfrey/Wooldridge test indicates a p-value below the significance level of 0.05. To address this issue, both Altaf and Torres-Reyna recommend the utilization of Arellano's technique.
 
 ```{r Test_for_serial_correlation}
-pbgtest(f_eff_2ways_2)
+pbgtest(f_eff_2ways)
 ```
+
+<br>
 
 #### Test of Heterosedasticity
 
@@ -1269,37 +1229,58 @@ The second challenge in our econometrics analysis was the presence of heterosced
 bptest(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data = Econ_data_v2, studentize=F)
 ```
 
-Nevertheless, heteroscedasticity if a common issue in ecometric analysis and solutions has been presented to tackle it. The use of the **vcovHC** function from the **sandwich** package computes heteroskedasticity-consistent covariance estimators using White and Arellano method (White 1980, 1984; Arellano, 1987). ' The argument **method = "arellano"** ', can be used to correct simultaneously the serial correlation that we have presented before.
+"Nevertheless, heteroscedasticity is a common issue in econometric analysis, and various solutions have been proposed to address it. Utilizing the **vcovHC** function from the **sandwich** package enables the computation of heteroskedasticity-consistent covariance estimators employing both White's (1980, 1984) and Arellano's (1987) methods. The argument **'** **method = "arellano"** ' can be employed to simultaneously correct the serial correlation issue discussed earlier
+
+<br>
 
 #### Test for cross-sectional dependence
 
-A final issue was the presence of cross-sectional dependance as we can see on the Breusch-Pagan and Pesaran tests below.
+A final issue was the presence of cross-sectional dependence as we can see on the Breusch-Pagan and Pesaran tests below.
 
 ```{r Test_for_cross_sectional_dependence}
 #Breusch-Pagan LM test for cross-sectional dependence
-pcdtest(f_eff_2, test = c("lm"))
+pcdtest(f_eff_2ways, test = c("lm"))
 
 #Pesaran test for cross-sectional dependence
-pcdtest(f_eff_2, test = c("cd"))
+pcdtest(f_eff_2ways, test = c("cd"))
 ```
 
-The utilization of Beck and Katz method is proposed by Altaf as a solution to tackle this issue. To use this method, we will forego the utilization of the **vcovHC** function but do a similar work with the **vcovBK** one, which also enable to correct cross-sectional dependence.
+Altaf proposes the utilization of the Beck and Katz method as a solution to tackle this issue. To implement this method, we will forgo the utilization of the **vcovHC** argument and instead use the **vcovSC** one, which performs the same correction and also enables the correction of cross-sectional dependence. 
+<br> 
 
-### Discussion
+#### Temporal section 
 
-```{r Results_before_correction}
-summary(f_eff_2ways_2)
+One of our concerns was how the model would react to the shift in attendance trend. As we saw, the decades preceding 1993 are a period of sharp decline, but the opposite is true after this threshold. Unfortunately, we currently lack the techniques to resolve this issue. However, we tried to have an alternative solution to take into account this issue. Our approach was to add in our analysis two models similar to the main one : - One specifically dedicated to the year before 1990 (included), corresponding to the year of the census closest to 1993, - one for the period strictly after.
+
+```{r Addition_of_the_Model_before_and_after_1990}
+#Before 1990
+Econ_data_v2_1<- Econ_data_v2 %>% filter(year <= 1990)
+
+f_eff_2ways_b90 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within",effect = "twoways")
+
+#After 1990 (not included)
+Econ_data_v2_2<- Econ_data_v2 %>% filter(year > 1990)
+
+f_eff_2ways_a90 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within",effect = "twoways")
+
+```
+
+<br> 
+### Part 2 - Discussion
+
+```{r Outcome_before_correction}
+summary(f_eff_2ways)
 ```
 
 ```{r Coefficient_with_correction_of_the_different_issues}
-coeftest(f_eff_2ways_2, vcov = vcovBK(f_eff_2ways_2, method = "arellano", cluster = "group"))
+coeftest(f_eff_2ways, vcov = vcovSCC(f_eff_2ways_2, method = "arellano"))
 ```
 
 <br>
 
 #### Multicolinearity analysis
 
-```{r}
+```{r VIF_test}
 # Modèle économétrique avec juste les tranches d'âge
 mvif_1 <-plm(entrées ~ a_less_than_6 + a_6_to_24 + a_25_to_42 + a_43_to_59 + a_60_and_more, data=Econ_data_v2, index=c("departement_code", "year"), model="pooling")
 
@@ -1339,16 +1320,17 @@ vif(mvif_6)
 
 ### Bayesan Information Criterion
 
-The selection of the final were performed using the Bayesian Information Criterion. We used the formula used in Yum's paper (2021) on his analysis of is an AIC for model selection for panel data models with fixed effect : 
+The selection of the final were performed using the Bayesian Information Criterion. We used the formula used in Yum's paper (2021) on his analysis of is an AIC for model selection for panel data models with fixed effect :
+
+<br> 
 $$
 BIC = N \times T \times \log(\sigma^2) + K \times \log(N \times T) 
-$$ With \$ \sigma = \frac{SSR}{N \times T}\$
-
+$$ 
 <br>
 
-```{r}
-f_eff_2ways_2 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina + factor(year) + factor(departement_code), data=Econ_data_v2, index=c("departement_code", "year"), model="within")
-```
+With : $\sigma = \frac{SSR}{N \times T}$
+
+<br>
 
 ```{r BIC_Calculation}
 # SSR
@@ -1408,7 +1390,177 @@ chosen_breaks <- c(-Inf, -50, -25, 0, 25, 50, Inf)
   tmaptools::palette_explorer()
 ```
 
+# Annex 
+
+## Annex 1 ...
+
+## Anex 2 - Test on the CSP models for the year before 1990
+
+<center>**\1990 and before** </center>
+
+```{r Dataset_for_the_model_b90}
+Econ_data_v2_1<- Econ_data_v2 %>% filter(year <= 1990)
+```
+
+### Test between OLS and Fixed Effect model
+```{r Test_between_fixed_effect_and_OLS_b90}
+
+#OLS Model
+ols_b90 <- plm(entrées ~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="pooling")
+
+#Fixed effect model
+f_eff_b90 <-plm(entrées ~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within")
+
+# F Test for Individual and/or Time Effects test
+pFtest(f_eff_b90, ols_b90)
+```
+
+### Test between Fixed and Random Model
+```{r Test_between_fixed_and_random_effect_b9}
+#Random effect model
+r_eff_b90 <-plm(entrées ~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="random") 
+
+
+#Haussman test to determine between fixed and random effect
+phtest(f_eff_b90, r_eff_b90)
+```
+
+<br>
+
+### Tests for time-fixed effect and individual effect
+
+```{r test_for_time_fixed_effect}
+#Model with time-fixed effects.
+f_eff_time_b90 <-plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within", effect = "time")
+
+#PLM test
+plmtest(f_eff_time_b90, effect="time", type="bp")
+plmtest(f_eff_time_b90, effect="time", type="honda")
+```
+
+
+```{r}
+f_eff_2ways_b90 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within",effect = "twoways")
+```
+
+<br>
+
+### Test for unit roots
+```{r Test_for_unit_roots}
+Panel.set<- pdata.frame(Econ_data_v2_1, index = c("departement_code", "year")) 
+
+adf.test(Econ_data_v2_1$entrées, k=2)adf.test(Econ_data_v2_1$entrées, k=2)
+```
+
+<br>
+
+### Test for serial correlation
+```{r Test_for_serial_correlation}
+pbgtest(f_eff_2ways_b90)
+```
+
+<br>
+
+### Test of Heterosedasticity
+```{r #Test_for_heteroscedasticity}
+bptest(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data = Econ_data_v2, studentize=F)
+```
+<br>
+
+### Test for cross-sectional dependence
+```{r Test_for_cross_sectional_dependence}
+#Breusch-Pagan LM test for cross-sectional dependence
+pcdtest(f_eff_b90, test = c("lm"))
+
+#Pesaran test for cross-sectional dependence
+pcdtest(f_eff_b90, test = c("cd"))
+```
+<br> 
+## Anex 3 - Test on the CSP models for the year after 1990
+
+<center>**\Striclty after (1990)** </center>
+
+```{r Dataset_for_the_model_a80}
+Econ_data_v2_2<- Econ_data_v2 %>% filter(year > 1990)
+```
+
+
+### Test between OLS and Fixed Effect
+```{r Test_between_fixed_effect_and_OLS_a90}
+
+# OLS Model
+ols_a90 <- plm(entrées ~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_2, index=c("departement_code", "year"), model="pooling")
+
+#Fixed effect model
+f_eff_a90 <-plm(entrées ~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_2, index=c("departement_code", "year"), model="within")
+
+# F Test for Individual and/or Time Effects test
+pFtest(f_eff_a90, ols_a90)
+```
+<br>
+### Test betwen Fixed and Random effect model
+```{r Test_between_fixed_and_random_effect_a90}
+#Random effect model
+r_eff_a90 <-plm(entrées ~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_2, index=c("departement_code", "year"), model="random") 
+
+
+#Haussman test to determine between fixed and random effect
+phtest(f_eff_a90, r_eff_a90)
+```
+
+<br>
+
+### Test for time-fixed effect and individual effect
+```{r test_for_time_fixed_effect_a90}
+#Model with time-fixed effects.
+f_eff_time_a90 <-plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_1, index=c("departement_code", "year"), model="within", effect = "time")
+
+#PLM test
+plmtest(f_eff_time_a90, effect="time", type="bp")
+plmtest(f_eff_time_a90, effect="time", type="honda")
+```
+
+
+```{r two_ways_model__specification_a90_annex}
+f_eff_2ways_a90 <- plm(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data=Econ_data_v2_2, index=c("departement_code", "year"), model="within",effect = "twoways")
+```
+<br>
+### Test for unit roots
+```{r Test_for_unit_roots_a90}
+Panel.set<- pdata.frame(Econ_data_v2_2, index = c("departement_code", "year")) 
+
+adf.test(Econ_data_v2_2$entrées, k=2)adf.test(Econ_data_v2_2$entrées, k=2)
+```
+
+<br>
+
+### Test for serial correlation
+```{r Test_for_serial_correlation_a90}
+pbgtest(f_eff_2ways_a90)
+```
+<br>
+### Test of Heterosedasticity
+```{r #Test_for_heteroscedasticity_a90}
+bptest(entrées~ Farm + Craf_sh_head + Ex_intel + Int_prof + Employees + Workers + Retirees + Ina, data = Econ_data_v2_2, studentize=F)
+```
+<br>
+### Test for cross-sectional dependence
+```{r Test_for_cross_sectional_dependence_a90}
+#Breusch-Pagan LM test for cross-sectional dependence
+pcdtest(f_eff_a90, test = c("lm"))
+
+#Pesaran test for cross-sectional dependence
+pcdtest(f_eff_a90, test = c("cd"))
+```
+<br> 
+
 # References
+
+**ALTAF Ali, 2017.** *Panel Models*
+
+URL : <https://altaf-ali.github.io/panel_data_models/>
+
+<br>
 
 **BLANCHARD Jean-Philippe, 2014.** " Multiplexes, public de banlieue et création cinématographique française : caractère marchand de l'ethnicité sur grand écran ". *Migrations Société*, 151, 153-164.
 
@@ -1522,4 +1674,4 @@ URL : [https://medium.com/\@manilwagle/how-to-deal-with-panel-data-practical-app
 
 **YUM** **Minchul , 2022.** Model selection for panel data models with fixed effects: a simulation study, *Applied Economics Letters*, 29:19, p. 1776-1783
 
-DOI: [10.1080/13504851.2021.1962505](https://doi.org/10.1080/13504851.2021.1962505)
+DOI: [10.1080/13504851.2021.1962505](https://doi.org/10.1080/13504851.2021.1962505)
